--- a/01_1_lab_presentation.ipynb
+++ b/01_1_lab_presentation.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1ffd5498-587b-4d81-a826-142f49dc118d",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "06bab018-6d8e-4ac1-9f70-c2fd61916a6a",
      "showTitle": false,
@@ -64,7 +70,7 @@
     "\n",
     "## Recorrido por el proceso de MLOps\n",
     "\n",
-    "En esta demostración, repasaremos algunos pasos comunes en el proceso de MLOps. El resultado de este proceso es un modelo utilizado para alimentar un panel para los interesados del negocio, que incluye:\n",
+    "En esta demostración, repasaremos algunos pasos comunes en el proceso de MLOps. El resultado de este proceso es un modelo utilizado para alimentar un tablero para los interesados del negocio, que incluye:\n",
     "* preparación de características\n",
     "* entrenamiento de un modelo para su despliegue\n",
     "* registro del modelo para que su uso esté gobernado\n",
@@ -82,7 +88,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ec8afb31-5f57-44f4-8236-5cb84a305510",
      "showTitle": false,
@@ -100,7 +109,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3251bc47-22fb-4066-8982-f8ab7d841b9d",
      "showTitle": false,
@@ -111,47 +123,6 @@
    "source": [
     "\n",
     "![](./files/images/version2-serverless.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "61854221-a62e-4c1c-bd3a-72bdf31b8670",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el cluster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el cluster fue eliminado después de 30 días, puedes recrearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demostración: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "39c36e2c-8fb0-4cee-9794-64740940a763",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "En este primer quickstart, cubriremos los fundamentos de MLOps.\n",
-    "\n",
-    "- Servir modelos\n",
-    "- Servir características en tiempo real con Online Tables\n",
-    "- Pruebas A/B\n",
-    "- Reentrenamiento automatizado\n",
-    "- Configuración de infraestructura y hooks con Databricks MLOps Stack\n",
-    "- ..."
    ]
   },
   {
@@ -173,7 +144,6 @@
    "outputs": [],
    "source": [
     "%pip install --quiet mlflow --upgrade\n",
-    "\n",
     "\n",
     "%restart_python"
    ]
@@ -204,7 +174,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "415dff07-b1d7-4a46-bf81-fe471e14a95f",
      "showTitle": false,
@@ -217,13 +190,11 @@
     "\n",
     "Para explorar MLOps, implementaremos un modelo de churn de clientes.\n",
     "\n",
-    "Nuestro equipo de marketing nos pidió crear un Panel que rastree la evolución del riesgo de abandono. Además, necesitamos proporcionar a nuestro equipo de renovaciones una lista diaria de clientes en riesgo de churn para aumentar nuestros ingresos finales.\n",
+    "Nuestro equipo de marketing nos pidió crear un tablero que rastree la evolución del riesgo de abandono. Además, necesitamos proporcionar a nuestro equipo de renovaciones una lista diaria de clientes en riesgo de churn para aumentar nuestros ingresos finales.\n",
     "\n",
     "Nuestro equipo de ingenieros de datos nos proporcionó un conjunto de datos que recopila información sobre nuestra base de clientes, incluyendo información de abandono. Ahí es donde comienza nuestra implementación.\n",
     "\n",
-    "Veamos cómo podemos implementar dicho modelo y proporcionar a nuestros equipos de marketing y renovaciones paneles para rastrear y analizar nuestra predicción de churn.\n",
-    "\n",
-    "Finalmente, podrás construir un Panel completo de DBSQL de Churn que contenga toda la información de clientes y abandono, ¡y también iniciar un espacio Genie para hacer cualquier pregunta usando lenguaje natural!"
+    "Veamos cómo podemos implementar dicho modelo y proporcionar a nuestros equipos de marketing y renovaciones tableros para rastrear y analizar nuestra predicción de churn."
    ]
   },
   {
@@ -246,6 +217,25 @@
    "source": [
     "telcoDF = spark.table(\"mlops_churn_bronze_customers\")\n",
     "display(telcoDF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "21420031-5719-4cb5-94b5-162acf8d5244",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Unity Catalog\n",
+    "Antes de empezar con la parte de analítica, vamos a echar un vistazo rápido a algunas funciones de control de acceso de Unity Catalog.\n",
+    "\n",
+    "Siguiente: [Gobernanza con Unity Catalog]($./01_2_unity_catalog_data_governance)"
    ]
   }
  ],
@@ -271,7 +261,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "00_mlops_end2end_presentation",
+   "notebookName": "01_1_lab_presentation",
    "widgets": {}
   },
   "language_info": {
