--- a/01_2_unity_catalog_data_governance.ipynb
+++ b/01_2_unity_catalog_data_governance.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2718a7a0-ca5a-4d27-b02e-abad673b3552",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "d580dbd2-99d9-4498-ba74-f4a739370be8",
@@ -109,7 +115,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d5bf0fe0-3291-498b-940d-746b38161944",
      "showTitle": false,
@@ -127,7 +136,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3e3cba22-57c7-424b-96a2-832323ba5fb0",
      "showTitle": false,
@@ -144,25 +156,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "cf81ca43-7dfc-4ea3-8262-96eccaf8b3b2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el cluster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el cluster fue eliminado después de 30 días, puedes recrearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demostración: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "077961bc-8733-4c80-8ed7-5b28c3af1cf0",
@@ -225,7 +222,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "535bb7a7-fe2e-45f3-915e-1d95115bf6e8",
@@ -264,24 +264,51 @@
      "inputWidgets": {},
      "nuid": "c67ef8d1-9459-402b-ab90-163f7505a757",
      "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1761331992923}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT CURRENT_CATALOG();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6780f479-a169-4602-841d-6d23edfede6b",
+     "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "-- the catalog has been created for your user and is defined as default. \n",
-    "-- make sure you run the 00-setup cell above to init the catalog to your user. \n",
-    "-- CREATE CATALOG IF NOT EXISTS dbdemos;\n",
-    "-- USE CATALOG dbdemos;\n",
-    "SELECT CURRENT_CATALOG();"
+    "SELECT CURRENT_SCHEMA();"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "7d373c90-dfe6-4159-98fc-cb5765b3c4dc",
@@ -302,9 +329,9 @@
     "\n",
     "Podrán crear tablas adicionales en este esquema.\n",
     "\n",
-    "### Descubribilidad\n",
+    "### Descubribimiento\n",
     "\n",
-    "Además, Unity Catalog también proporciona explorabilidad y descubribilidad.\n",
+    "Además, Unity Catalog también facilita la exploración y el descubrimiento de datos.\n",
     "\n",
     "Cualquier persona con acceso a las tablas podrá buscarlas y analizar su uso principal. <br>\n",
     "Puedes usar el menú de Búsqueda (⌘ + P) para navegar por tus activos de datos (tablas, notebooks, consultas...)"
@@ -322,7 +349,14 @@
      "inputWidgets": {},
      "nuid": "1779b320-0b52-4283-a950-3b8915f0ec60",
      "showTitle": true,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"database\":191},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1761328273684}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": "As you can see, our tables are available under our catalog."
     }
    },
@@ -349,19 +383,22 @@
    },
    "outputs": [],
    "source": [
-    "-- Let's grant our ANALYSTS a SELECT permission:\n",
-    "-- Note: make sure you created an analysts and dataengineers group first, using the account console.\n",
+    "-- Vamos a otorgar a nuestros ANALISTAS el permiso de SELECT:\n",
+    "-- Nota: asegúrate de haber creado previamente los grupos analysts y dataengineers desde la consola de la cuenta.\n",
     "GRANT SELECT ON TABLE mlops_churn_bronze_customers TO `analysts`;\n",
     "\n",
-    "-- We'll grant an extra MODIFY to our Data Engineer\n",
-    "GRANT SELECT, MODIFY ON SCHEMA workshop_databricks.dbdemos_mlops TO `dataengineers`;"
+    "-- Otorgaremos un permiso adicional de MODIFY a nuestro Ingeniero de Datos\n",
+    "GRANT SELECT, MODIFY ON SCHEMA workshop_databricks.dbdemos_mlops_andrea TO `dataengineers`;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9f61016b-7bcb-4bb8-b2ff-c5d2886a8aeb",
      "showTitle": false,
@@ -373,7 +410,9 @@
     "\n",
     "## Enmascaramiento de datos PII, filtrado a nivel de fila y columna\n",
     "\n",
-    "En las siguientes celdas demostraremos cómo manejar datos sensibles mediante el enmascaramiento de columnas y filas."
+    "En las siguientes celdas demostraremos cómo manejar datos sensibles mediante el enmascaramiento de columnas y filas.\n",
+    "\n",
+    "Primero, vamos a crear una nueva tabla llamada \"mlops_churn_protected\" con algunas columnas adicionales"
    ]
   },
   {
@@ -402,7 +441,7 @@
     "  \"Vidal\"             AS lastname,\n",
     "  \"Calle 123\"         AS address,\n",
     "  CASE\n",
-    "    WHEN ROW_NUMBER() OVER (ORDER BY customer_id) <= (COUNT(*) OVER () / 2) THEN 'Chile'\n",
+    "    WHEN ROW_NUMBER() OVER (ORDER BY customer_id) <= (COUNT(*) OVER () / 2) THEN 'Chile' \n",
     "    ELSE 'Brazil'\n",
     "  END                 AS country\n",
     "FROM mlops_churn_bronze_customers;"
@@ -433,9 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "SELECT *\n",
-    "FROM mlops_churn_protected\n",
-    "LIMIT 100;"
+    "SELECT * FROM mlops_churn_protected;"
    ]
   },
   {
@@ -478,26 +515,24 @@
    },
    "outputs": [],
    "source": [
-    "-- hls_admin group will have access to all data, all other users will see a masked information.\n",
+    "-- El grupo de retail_admin va a tener acceso a todos los datos, el resto de usuarios va a ver la información enmascarada \n",
     "CREATE OR REPLACE FUNCTION simple_mask(column_value STRING)\n",
     "   RETURN IF(is_account_group_member('retail_admin'), column_value, \"****\");\n",
     "   \n",
-    "-- Mask all PII information\n",
+    "-- Enmascara toda la información PII\n",
     "ALTER TABLE mlops_churn_protected ALTER COLUMN email SET MASK simple_mask;\n",
     "ALTER TABLE mlops_churn_protected ALTER COLUMN firstname SET MASK simple_mask;\n",
     "ALTER TABLE mlops_churn_protected ALTER COLUMN lastname SET MASK simple_mask;\n",
     "ALTER TABLE mlops_churn_protected ALTER COLUMN address SET MASK simple_mask;\n",
     "\n",
-    "-- Apply row filter based on the country\n",
-    "CREATE OR REPLACE FUNCTION country_filter(country_param STRING) \n",
-    "RETURN \n",
-    "  is_account_group_member('retail_admin') or  -- retail_admin can access all regions (you could do that with another table)\n",
-    "  country_param like \"Chil%\";                 -- non retail_admin's can only access regions containing US\n",
+    "-- Aplica un filtro de filas para la columna país \n",
+    "CREATE OR REPLACE FUNCTION country_filter(country STRING) \n",
+    "RETURN (\n",
+    "  is_account_group_member('retail_admin') or  -- el grupo retail_admin puede ver todas las regiones de la tabla\n",
+    "  country like \"Chile\"                 -- los usuarios que no son retail_admins solo pueden ver la región Chile\n",
+    ");                 \n",
     "\n",
     "ALTER TABLE mlops_churn_protected SET ROW FILTER country_filter ON (country);\n",
-    "\n",
-    "-- ALTER FUNCTION simple_mask OWNER TO `account users`; -- grant access to all user to the function for the demo - don't do it in production\n",
-    "-- ALTER FUNCTION country_filter OWNER TO `account users`; -- grant access to all user to the function for the demo - don't do it in production\n",
     "\n",
     "SELECT * FROM mlops_churn_protected"
    ]
@@ -528,7 +563,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "1499cc82-78b5-4075-9995-b7eee3e7fe1a",
@@ -546,14 +584,6 @@
     "Unity Catalog puede ser utilizado desde simples GRANT hasta la construcción de una organización datamesh completa.\n",
     "\n",
     "<img src=\"https://github.com/QuentinAmbard/databricks-demo/raw/main/product_demos/uc/lineage/lineage-table.gif\" style=\"float: right; margin-left: 10px\"/>\n",
-    "\n",
-    "### ACL de grano fino: acceso a nivel de fila/columna\n",
-    "\n",
-    "¿Necesitas un control más avanzado? Puedes elegir cambiar dinámicamente la salida de tu tabla según los permisos del usuario: `dbdemos.install('uc-01-acl')`\n",
-    "\n",
-    "### Ubicación externa segura (S3/ADLS/GCS)\n",
-    "\n",
-    "Unity Catalog te permite asegurar tus tablas gestionadas pero también tus ubicaciones externas: `dbdemos.install('uc-02-external-location')`\n",
     "\n",
     "### Linaje\n",
     "\n",
@@ -580,7 +610,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6959e597-b3f1-425a-a964-cae4b016e286",
      "showTitle": false,
@@ -592,7 +625,7 @@
     "## Feature Engineering\n",
     "Nuestro primer trabajo es analizar los datos y preparar un conjunto de características.\n",
     "\n",
-    "Siguiente: [Analizar los datos y preparar características]($./01_feature_engineering)"
+    "Siguiente: [Analizar los datos y preparar características]($./02_1_feature_engineering)"
    ]
   }
  ],
@@ -615,7 +648,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "01_unity_catalog_data_governance",
+   "notebookName": "01_2_unity_catalog_data_governance",
    "widgets": {}
   },
   "language_info": {
