--- a/02_3_train_lightGBM.ipynb
+++ b/02_3_train_lightGBM.ipynb
@@ -64,48 +64,8 @@
     }
    },
    "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el cluster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el clúster fue eliminado después de 30 días, puedes volver a crearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demo: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "a2094a62-a701-45ee-9cca-09d75c3d03e3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbdemos.create_cluster('mlops-end2end')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7b72e05b-9bbe-4db3-b232-1f3ffe466a0a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Último entorno probado:\n",
-    "\n",
-    "mlflow==3.3.0"
+    "### Utilice el cluster «mlops_workshop_databricks» para ejecutar este notebook\n",
+    "Para ejecutar esta demostración, simplemente selecciona el cluster `mlops_workshop_databricks` en el menú desplegable.\n"
    ]
   },
   {
@@ -127,7 +87,6 @@
    "outputs": [],
    "source": [
     "%pip install --quiet lightgbm mlflow --upgrade\n",
-    "\n",
     "\n",
     "%restart_python"
    ]
@@ -195,8 +154,7 @@
    "source": [
     "import mlflow\n",
     "\n",
-    "xp_name = \"dbdemos_mlops_churn_demo_quickstart\"\n",
-    "xp_path = f\"/Users/{current_user}\"\n",
+    "xp_name = \"dbdemos_mlops_churn_demo_experiment\"\n",
     "\n",
     "experiment_name = f\"{xp_path}/{xp_name}\"\n",
     "\n",
@@ -1099,7 +1057,7 @@
    "source": [
     "### Automatizar la validación de promoción de modelos\n",
     "\n",
-    "Próximo paso: [Buscar ejecuciones y activar la validación de promoción de modelos]($./03_from_notebook_to_models_in_uc)"
+    "Próximo paso: [Buscar ejecuciones y activar la validación de promoción de modelos]($./02_4_from_notebook_to_models_in_uc)"
    ]
   }
  ],
@@ -1125,7 +1083,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "03_train_lightGBM",
+   "notebookName": "02_3_train_lightGBM",
    "widgets": {}
   },
   "language_info": {
