--- a/02_5_challenger_validation.ipynb
+++ b/02_5_challenger_validation.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "574c57ea-5713-437d-a0ab-58d6a773af36",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e4bb7d7a-075f-46c4-976b-a3c6b550355c",
      "showTitle": false,
@@ -52,61 +58,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "eda3a04d-4ac3-4de4-b025-57c116400816",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el cluster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el cluster fue eliminado después de 30 días, puedes recrearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demo: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "8c4fc80b-c999-46b1-ad40-3224a9f8d810",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbdemos.create_cluster('mlops-end2end')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "841144ab-1e3b-4ec1-8c36-2b3d1f982717",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Último ambiente testado:\n",
-    "\n",
-    "mlflow==3.3.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "5e2afbbd-270a-41cf-b26c-9b04c00f1f04",
@@ -153,7 +108,6 @@
    "outputs": [],
    "source": [
     "%pip install --quiet mlflow --upgrade\n",
-    "\n",
     "\n",
     "%restart_python"
    ]
@@ -259,7 +213,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -310,7 +263,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -330,7 +282,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -384,7 +335,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -446,7 +396,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -568,7 +517,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -612,7 +560,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -663,7 +610,6 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
-      "batchId": -3790605029824796,
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
@@ -679,7 +625,7 @@
     "\n",
     "Ahora tenemos la certeza de que nuestro modelo está listo para ser utilizado en canalizaciones de inferencia y endpoints de servicio en tiempo real, ya que cumple con nuestros estándares de validación.\n",
     "\n",
-    "Siguiente: [Ejecutar inferencia por lotes desde nuestro nuevo modelo Champion promovido]($./05_batch_inference)"
+    "Siguiente: [Ejecutar inferencia por lotes desde nuestro nuevo modelo Champion promovido]($./02_6_batch_inference)"
    ]
   }
  ],
@@ -701,7 +647,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "05_challenger_validation",
+   "notebookName": "02_5_challenger_validation",
    "widgets": {}
   },
   "language_info": {
