--- a/03_AI_functions.ipynb
+++ b/03_AI_functions.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "80c7b22b-c255-4379-bc3d-23352278c46d",
      "showTitle": false,
@@ -23,7 +26,51 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bee2409b-89f5-4bd9-8f5c-f6748b2413eb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Utilice un cluster Serverless Environment 2 para ejecutar este notebook\n",
+    "Para ejecutar esta demostración, simplemente selecciona el cluster `Serverless` en el menú desplegable.\n",
+    "Comprueba que la versión del cluster serverless es la número 2 <br />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b3a1e1fd-0854-42bb-9b7c-4e8f29b4f0b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "![](./files/images/version2-serverless.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1b77b7ff-c22a-4c05-9e93-7ef5847bf2ba",
      "showTitle": false,
@@ -39,7 +86,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8533980d-f6ca-452d-b166-bc0cee6c1b6e",
      "showTitle": false,
@@ -59,7 +109,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "16df731a-55c3-4f3d-8456-c93e2a5b414e",
      "showTitle": false,
@@ -87,7 +140,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4a69749e-4627-42eb-8f43-c7a0b14ec4b9",
      "showTitle": false,
@@ -315,20 +371,39 @@
    },
    "outputs": [],
    "source": [
-    "SELECT extracao.nombre,\n",
-    "       extracao.fecha,      \n",
-    "       extracao.numero_de_cuenta,\n",
-    "       extracao.beneficiario,\n",
-    "       extracao.monto,\n",
-    "       extracao.codigo_de_transaccion\n",
+    "SELECT extraccion.nombre,\n",
+    "       extraccion.fecha,      \n",
+    "       extraccion.numero_de_cuenta,\n",
+    "       extraccion.beneficiario,\n",
+    "       extraccion.monto,\n",
+    "       extraccion.codigo_de_transaccion\n",
     "FROM (\n",
     "  SELECT ai_extract(\n",
     "    \"\"\"\n",
     "                El cliente Juan Pérez, con número de cuenta 123456789, realizó una transferencia bancaria el 15/09/2025 por un monto de 2,500 euros al beneficiario María López. La operación fue registrada bajo el código de transacción TRX987654.\n",
     "    \"\"\",\n",
     "    array('nombre', 'fecha', 'numero_de_cuenta', 'beneficiario', 'monto', 'codigo_de_transaccion')\n",
-    "  ) as extracao\n",
+    "  ) as extraccion\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "18ae8d8b-dfdd-41aa-88c3-ebb97729a5e0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "En el siguiente ejemplo, _crea_ un esquema con tu nombre para no tener problema de sobreescritura de datos:"
    ]
   },
   {
@@ -336,7 +411,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "579cbbb5-1771-4edb-b94f-0d3096a489da",
      "showTitle": false,
@@ -347,11 +425,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "CREATE CATALOG IF NOT EXISTS `main_andrea`;\n",
+    "CREATE SCHEMA IF NOT EXISTS `workshop_databricks`.`demo_ai_functions_nombre`; -- sustituye nombre por el tuyo\n",
     "\n",
-    "CREATE SCHEMA IF NOT EXISTS `main_andrea`.`demo_ai_functions`;\n",
-    "\n",
-    "CREATE VOLUME IF NOT EXISTS `main_andrea`.`demo_ai_functions`.`archivos`;"
+    "CREATE VOLUME IF NOT EXISTS `workshop_databricks`.`demo_ai_functions_nombre`.`archivos`; -- sustituye nombre por el tuyo"
    ]
   },
   {
@@ -374,8 +450,8 @@
    "source": [
     "%python\n",
     "\n",
-    "catalog = \"main_andrea\"\n",
-    "schema = \"demo_ai_functions\"\n",
+    "catalog = \"workshop_databricks\"\n",
+    "schema = \"demo_ai_functions_nombre\" #sustituye el nombre por el tuyo\n",
     "volume = \"archivos\"\n",
     "\n",
     "download_url = \"https://raw.githubusercontent.com/aestaire/ml_workshop/refs/heads/main/files/data/reviews.csv\"\n",
@@ -417,7 +493,7 @@
    },
    "outputs": [],
    "source": [
-    "CREATE OR REPLACE TABLE main_andrea.demo_ai_functions.reviews_structured AS\n",
+    "CREATE OR REPLACE TABLE workshop_databricks.demo_ai_functions.reviews_structured AS\n",
     "SELECT\n",
     "  ai_query(\n",
     "    \"databricks-meta-llama-3-3-70b-instruct\",\n",
@@ -450,7 +526,28 @@
     "                        }\n",
     "                      }'\n",
     "   ) AS structured_review, *\n",
-    "   FROM main_andrea.demo_ai_functions.reviews;                   \n"
+    "   FROM workshop_databricks.demo_ai_functions.reviews;                   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "82eac314-694b-48d3-aa61-3df1e644506f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT * FROM workshop_databricks.demo_ai_functions.reviews_structured;"
    ]
   },
   {
@@ -479,7 +576,7 @@
    "outputs": [],
    "source": [
     " -- Now that we've got results, lets unpack the JSON so we can view as a table\n",
-    "CREATE OR REPLACE TABLE main_andrea.demo_ai_functions.reviews_structured_gold AS\n",
+    "CREATE OR REPLACE TABLE workshop_databricks.demo_ai_functions.reviews_structured_gold AS\n",
     "SELECT\n",
     "  parse_json(structured_review):location::string AS location,\n",
     "  parse_json(structured_review):service_score::int AS service_score,\n",
@@ -488,7 +585,28 @@
     "  parse_json(structured_review):sentiment::string AS sentiment,\n",
     "  parse_json(structured_review):product_name::string AS product_name,\n",
     "  *\n",
-    "FROM main_andrea.demo_ai_functions.reviews_structured;"
+    "FROM workshop_databricks.demo_ai_functions.reviews_structured;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ef311242-fc3c-4c4e-8b35-0a05ae3ad3b5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT * FROM workshop_databricks.demo_ai_functions.reviews_structured_gold;"
    ]
   },
   {
@@ -517,8 +635,8 @@
    "outputs": [],
    "source": [
     "-- With our AI augmented data ready, we can use it to narrow down just the reviews that we should be taking action on\n",
-    "select product_name, * except(product_name)\n",
-    "from main_andrea.demo_ai_functions.reviews_structured_gold\n",
+    "select product_name, location, sentiment, review_es, franchiseID, review_date\n",
+    "from workshop_databricks.demo_ai_functions.reviews_structured_gold\n",
     "where sentiment = 'negative';"
    ]
   }
@@ -542,7 +660,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "09_AI_functions",
+   "notebookName": "03_AI_functions",
    "widgets": {}
   },
   "language_info": {
