--- a/_resources/00-setup.ipynb
+++ b/_resources/00-setup.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "da11407a-8fc6-432a-be45-0b154eab4b7b",
      "showTitle": false,
@@ -32,9 +35,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "a7ecade9-3fc4-472e-a225-353481c5c84f",
+     "nuid": "37ab8e3b-44be-4c61-9b4d-3ac654b3a215",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -44,9 +50,34 @@
    "source": [
     "current_user = dbutils.notebook.entry_point.getDbutils().notebook().getContext().userName().get()\n",
     "reformat_current_user = current_user.split(\"@\")[0].lower().replace(\".\", \"_\")\n",
+    "display(current_user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a7ecade9-3fc4-472e-a225-353481c5c84f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# current_user = \"Escribe aquí tu usuario. Ej: andrea.estaire@databricks.com\"\n",
+    "current_user = \"andrea.estaire@databricks.com\"\n",
+    "# name = \"Escribe aquí tu nombre Ej: andrea\"\n",
+    "name = \"andrea\"\n",
     "\n",
     "catalog = \"workshop_databricks\"\n",
-    "dbName = db = \"dbdemos_mlops\"\n",
+    "dbName = db = f\"dbdemos_mlops_{name}\"\n",
     "online_store_name = \"shared_online_store\" # \"fe_shared_demo\""
    ]
   },
@@ -55,7 +86,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ba29d433-d8ab-4b65-ac84-cdc896ddaf5e",
      "showTitle": false,
@@ -76,7 +110,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ef45f5d0-b9b9-4cc3-a3d0-fd3bb1214286",
      "showTitle": false,
@@ -105,7 +142,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2af95878-5425-43dc-afa8-9aa107e566d3",
      "showTitle": false,
@@ -123,7 +163,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9bbf4682-a963-4643-a07b-414a25749e22",
      "showTitle": false,
@@ -136,7 +179,7 @@
     "# Set UC Model Registry as default\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
     "xp_name = \"dbdemos_mlops_churn_demo_experiment\"\n",
-    "xp_path = f\"/Users/{current_user}/dbdemos_mlops\"\n",
+    "xp_path = f\"/Users/{current_user}/experiments\"\n",
     "if is_advanced_mlops_demo:\n",
     "  # Set Experiment name as default\n",
     "  xp_name = \"dbdemos_advanced_mlops_churn_demo_experiment\"\n",
@@ -156,7 +199,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "34b0d3a6-e90f-443d-a91e-eff1ed33d6b6",
      "showTitle": true,
@@ -209,7 +255,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7f2b56b9-e21f-4c14-8202-9cc0528433af",
      "showTitle": false,
@@ -237,7 +286,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e41b50da-c5c0-4526-ab8f-cacc1b823201",
      "showTitle": false,
@@ -268,7 +320,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0aa62150-71f1-4504-a903-2d2f4a01b142",
      "showTitle": false,
@@ -299,7 +354,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ea57b3e6-77ac-4850-a8e0-f5bd71cd0cd2",
      "showTitle": true,
@@ -374,7 +432,13 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "environment_version": "2"
