--- a/02_1_feature_engineering.ipynb
+++ b/02_1_feature_engineering.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a4f9cdbe-162f-4024-be60-bf8005db4acf",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1250481a-e295-4095-8099-815f514f8f64",
      "showTitle": false,
@@ -45,7 +51,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a4bd20d4-e412-481e-bd30-a45428a95e54",
      "showTitle": false,
@@ -63,7 +72,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b2a01cb2-bc9a-4c61-ab0a-bda66555c8c1",
      "showTitle": false,
@@ -74,42 +86,6 @@
    "source": [
     "\n",
     "![](./files/images/version2-serverless.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "05f24747-89bf-447f-bb2f-229f6a9bdc86",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el clúster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el clúster fue eliminado después de 30 días, puedes volver a crearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demo: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "6085dc7b-5acf-479d-afa6-a91745fcfab2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Último environment testado:\n",
-    "\n",
-    "mlflow==3.3.0"
    ]
   },
   {
@@ -164,7 +140,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2e17d5e1-9342-46dd-8c08-e6087b42a21a",
      "showTitle": false,
@@ -243,7 +222,7 @@
    },
    "outputs": [],
    "source": [
-    "# Read into Spark\n",
+    "# Leerlo con Spark\n",
     "telcoDF = spark.read.table(\"mlops_churn_bronze_customers\")\n",
     "display(telcoDF)"
    ]
@@ -252,7 +231,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5c6c6152-a8e0-46a4-85bf-f1de19d7ae06",
      "showTitle": false,
@@ -274,7 +256,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "32dc3ccb-e834-4eda-8870-03fa0e5ef5cb",
      "showTitle": false,
@@ -347,7 +332,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "isMarkdownSandbox": true,
      "nuid": "13bdca83-654d-431d-b190-5b6502e1d561",
@@ -393,7 +381,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b35061cb-7e6b-471f-9d94-aa7961441e52",
      "showTitle": false,
@@ -447,7 +438,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6455b00b-aaf5-47d7-87db-90432831ce9e",
      "showTitle": false,
@@ -464,7 +458,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f287d3a0-e317-4c15-92aa-b86e2c4a3cff",
      "showTitle": false,
@@ -473,9 +470,9 @@
     }
    },
    "source": [
-    "### Entrenar un modelo base\n",
+    "### Entrenar un modelo de machine learning\n",
     "\n",
-    "Próximo paso: [Entrenar un modelo lightGBM]($./02_train_lightGBM)"
+    "Próximo paso: [Entrenar un modelo lightGBM]($./02_3_train_lightGBM)"
    ]
   }
  ],
@@ -503,7 +500,7 @@
     },
     "pythonIndentUnit": 2
    },
-   "notebookName": "02_feature_engineering",
+   "notebookName": "02_1_feature_engineering",
    "widgets": {}
   },
   "language_info": {
