--- a/02_4_from_notebook_to_models_in_uc.ipynb
+++ b/02_4_from_notebook_to_models_in_uc.ipynb
@@ -69,45 +69,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "95468e2d-28fd-470a-af7b-0e377a9ee610",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el cluster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el cluster fue eliminado después de 30 días, puedes volver a crearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demostración: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "c4282888-b52b-4cfc-8662-c3eeedf20bdf",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbdemos.create_cluster('mlops-end2end')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "fe2e86a3-54a7-4df2-b3bb-94f2db6789a5",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -121,27 +82,6 @@
     "Unity Catalog propone alias de modelo en texto libre, por ejemplo, `Baseline`, `Challenger`, `Champion`, junto con el uso de etiquetas.\n",
     "\n",
     "Los usuarios con los permisos apropiados pueden crear modelos, modificar alias y etiquetas, usar modelos, etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1ccf1e59-73b1-4013-8126-eff15bbd3520",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Último ambiente testado:\n",
-    "\n",
-    "mlflow==3.3.0"
    ]
   },
   {
@@ -163,7 +103,6 @@
    "outputs": [],
    "source": [
     "%pip install --quiet mlflow --upgrade\n",
-    "\n",
     "\n",
     "%restart_python"
    ]
@@ -276,13 +215,12 @@
    "source": [
     "import mlflow\n",
     "\n",
-    "\n",
-    "xp_name = \"dbdemos_mlops_churn_demo_quickstart\"\n",
+    "xp_name = \"dbdemos_mlops_churn_demo_experiment\"\n",
     "print(f\"Finding best run from {xp_name}_* and pushing new model version to {model_name}\")\n",
-    "xp_path = f\"/Users/{current_user}\"\n",
     "\n",
-    "mlflow.set_experiment(f\"{xp_path}/{xp_name}\")\n",
+    "experiment_name = f\"{xp_path}/{xp_name}\"\n",
     "\n",
+    "mlflow.set_experiment(experiment_name)\n",
     "\n",
     "experiment_id = mlflow.search_experiments(filter_string=f\"name LIKE '{xp_path}/{xp_name}%'\", order_by=[\"last_update_time DESC\"])[0].experiment_id\n",
     "print(experiment_id)"
@@ -314,7 +252,8 @@
     "  filter_string=\"status = 'FINISHED' and run_name='light_gbm_baseline'\" #filter on mlops_best_run to always use the notebook 02 to have a more predictable demo\n",
     ")\n",
     "# Optional: Load MLflow Experiment as a spark df and see all runs\n",
-    "# df = spark.read.format(\"mlflow-experiment\").load(experiment_id)\n",
+    "df = spark.read.format(\"mlflow-experiment\").load(experiment_id)\n",
+    "df.display()\n",
     "best_model"
    ]
   },
@@ -423,7 +362,6 @@
    "outputs": [],
    "source": [
     "from mlflow import MlflowClient\n",
-    "\n",
     "\n",
     "client = MlflowClient()\n",
     "\n",
@@ -582,7 +520,7 @@
     "\n",
     "Si el modelo pasa todas las pruebas, será promovido a `Champion`.\n",
     "\n",
-    "Próximo: Descubre cómo se está probando el modelo antes de ser promovido a `Champion` [usando el notebook de validación de modelos]($./04_challenger_validation)"
+    "Próximo: Descubre cómo se está probando el modelo antes de ser promovido a `Champion` [usando el notebook de validación de modelos]($./02_5_challenger_validation)"
    ]
   }
  ],
@@ -608,7 +546,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "04_from_notebook_to_models_in_uc",
+   "notebookName": "02_4_from_notebook_to_models_in_uc",
    "widgets": {}
   },
   "language_info": {
