--- a/02_6_batch_inference.ipynb
+++ b/02_6_batch_inference.ipynb
@@ -51,66 +51,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "72eefd90-5241-4319-9fd3-50d889a553bb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### Se ha creado un cluster para esta demostración\n",
-    "Para ejecutar esta demostración, simplemente selecciona el cluster `dbdemos-mlops-end2end` en el menú desplegable ([abrir configuración del clúster](https://e2-demo-field-eng.cloud.databricks.com/#setting/clusters/1013-181446-g00pu2bj/configuration)). <br />\n",
-    "*Nota: Si el cluster fue eliminado después de 30 días, puedes volver a crearlo con `dbdemos.create_cluster('mlops-end2end')` o reinstalar la demo: `dbdemos.install('mlops-end2end')`*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "eb608d98-7bc2-4459-a934-d5217f90fb43",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbdemos.create_cluster('mlops-end2end')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c70235ea-52ef-490f-9b8f-57a52ba2fb29",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Último ambiente testado:\n",
-    "\n",
-    "mlflow==3.3.0"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -129,7 +69,6 @@
    "outputs": [],
    "source": [
     "%pip install --quiet mlflow --upgrade\n",
-    "\n",
     "\n",
     "%restart_python"
    ]
@@ -244,7 +183,6 @@
    "source": [
     "from mlflow.store.artifact.models_artifact_repo import ModelsArtifactRepository\n",
     "\n",
-    "\n",
     "requirements_path = ModelsArtifactRepository(f\"models:/{catalog}.{db}.mlops_churn@Champion\").download_artifacts(artifact_path=\"requirements.txt\") # download model from remote registry"
    ]
   },
@@ -267,7 +205,6 @@
    "outputs": [],
    "source": [
     "%pip install --quiet -r $requirements_path\n",
-    "\n",
     "\n",
     "%restart_python"
    ]
@@ -399,7 +336,7 @@
     "- Validación de modelos, pruebas Champion-Challenger y promoción de modelos\n",
     "- Batch Inference cargando el modelo como un UDF de PySpark\n",
     "\n",
-    "Esperamos que hayas disfrutado esta demostración. Como siguiente paso, busca nuestra demostración avanzada de MLOps de extremo a extremo, que incluirá recorridos más detallados sobre los siguientes aspectos de MLOps:\n",
+    "Esperamos que hayas disfrutado esta demostración. Como siguiente paso, busca nuestra demostración avanzada de MLOps de extremo a extremo, que incluirá recorridos más detallados sobre los siguientes aspectos de MLOps: https://www.databricks.com/resources/demos/tutorials/data-science-and-ai/mlops-end-to-end-pipeline?itm_data=demo_center \n",
     "\n",
     "- Servir características y Feature Store\n",
     "- Monitoreo de datos y modelos\n",
@@ -425,7 +362,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "06_batch_inference",
+   "notebookName": "02_6_batch_inference",
    "widgets": {}
   },
   "language_info": {
